# deltawash-public

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md
assets/models/: lstm_model.pth
config/: example.yaml  local.yaml
dashboard/: DEPLOYMENT_GUIDE.md  README.md  docker-compose.dashboard.yml
dashboard/backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  railway.json  render.yaml  requirements.txt
dashboard/backend/alembic/: env.py
dashboard/backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py
dashboard/backend/tests/: conftest.py
dashboard/frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
dashboard/frontend/src/: App.tsx  index.css
demos/: README.md  manifest.json
docs/: DASHBOARD_STARTUP.md  NETWORK_ACCESS.md  TEST_EXECUTION_GUIDE.md  start-dashboard.ps1
hardware/esp8266/: esp8266.ino
src/deltawash_pi/: __init__.py
src/deltawash_pi/cli/: __init__.py  _demo_utils.py  _helpers.py  _recording.py  analytics.py  capture.py  demo.py  led_test.py  roi_calibrate.py  (+1 more)
tests/: __init__.py
tests/integration/: test_analytics.py  test_interpreter.py
tests/smoke/: test_demo_mode.py  test_demo_recording.py  test_latency.py  test_led_client.py
tests/unit/: test_capture_helpers.py  test_config_loader.py  test_demo_replay.py  test_detectors.py  test_roi_calibrate.py  test_session_manager.py  test_timing.py
tools/pi/: handwash_recorder.py  inference.py  inference_script.py  pi_inference_cnn.py  record.py  test_cam.py
(+88 files in other folders)
